# cache_examples

./: CMakeLists.txt  Makefile  Notes.md
array_size/: CMakeLists.txt  main.cpp
matrix_multiplication/: CMakeLists.txt  main.cpp  matrix.cpp  matrix.h
naive_simple/: CMakeLists.txt  main.cpp  matrix.cpp  matrix.h
notebook/: array_size.ipynb  matrix_multiplication.ipynb  simple_loop_experiment.ipynb
notebook/.ipynb_checkpoints/: array_size-checkpoint.ipynb  simple_loop_experiment-checkpoint.ipynb
output/: arr.csv  array_size.csv  matrix.csv  simple_consolidated.csv  simple_loop.csv  simple_output.csv
simple_loop/: CMakeLists.txt  main.cpp
